Update upload-to-storage.yml for Azure Pipelines

--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -22,6 +22,8 @@ steps:
           rm -rf .husky
           echo rm -rf .gitignore
           rm -rf .gitignore
+          echo ls -la
+          ls -la
 
     - task: AzureCLI@2
       displayName: Upload reports to Azure Storage
