--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-20.04
+  vmImage: windows-latest
 
 steps:
     - task: Bash@3
@@ -14,24 +14,24 @@ steps:
           pwd
           echo ls -la
           ls -la
-          echo rm -rf git
-          rm -rf .git
-          echo rm -rf .github
-          rm -rf .github
-          echo rm -rf .husky
-          rm -rf .husky
-          echo rm -rf .gitignore
-          rm -rf .gitignore
-          echo ls -la
-          ls -la
+#          echo rm -rf git
+#          rm -rf .git
+#          echo rm -rf .github
+#          rm -rf .github
+#          echo rm -rf .husky
+#          rm -rf .husky
+#          echo rm -rf .gitignore
+#          rm -rf .gitignore
+#          echo ls -la
+#          ls -la
 
-    - task: Bash@3
-      displayName: Install Azure CLI version 2.53.1
-      inputs:
-        targetType: 'inline'
-        script: |
-          sudo apt-get purge --auto-remove azure-cli
-          pip3 install azure-cli==2.53.1
+#    - task: Bash@3
+#      displayName: Install Azure CLI version 2.53.1
+#      inputs:
+#        targetType: 'inline'
+#        script: |
+#          sudo apt-get purge --auto-remove azure-cli
+#          pip3 install azure-cli==2.53.1
 
     - task: AzureCLI@2
       displayName: Upload reports to Azure Storage
