--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -14,16 +14,16 @@ steps:
           pwd
           echo ls -la
           ls -la
-#          echo rm -rf git
-#          rm -rf .git
-#          echo rm -rf .github
-#          rm -rf .github
-#          echo rm -rf .husky
-#          rm -rf .husky
-#          echo rm -rf .gitignore
-#          rm -rf .gitignore
-#          echo ls -la
-#          ls -la
+          echo rm -rf git
+          rm -rf .git
+          echo rm -rf .github
+          rm -rf .github
+          echo rm -rf .husky
+          rm -rf .husky
+          echo rm -rf .gitignore
+          rm -rf .gitignore
+          echo ls -la
+          ls -la
 
 #    - task: Bash@3
 #      displayName: Install Azure CLI version 2.53.1
