--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -5,25 +5,25 @@ pool:
   name: 'My Agent pool'
 
 steps:
-    - task: Bash@3
-      displayName: See Files
-      inputs:
-        targetType: 'inline'
-        script: |
-          echo pwd
-          pwd
-          echo ls -la
-          ls -la
-          echo rm -rf git
-          rm -rf .git
-          echo rm -rf .github
-          rm -rf .github
-          echo rm -rf .husky
-          rm -rf .husky
-          echo rm -rf .gitignore
-          rm -rf .gitignore
-          echo ls -la
-          ls -la
+#    - task: Bash@3
+#      displayName: See Files
+#      inputs:
+#        targetType: 'inline'
+#        script: |
+#          echo pwd
+#          pwd
+#          echo ls -la
+#          ls -la
+#          echo rm -rf git
+#          rm -rf .git
+#          echo rm -rf .github
+#          rm -rf .github
+#          echo rm -rf .husky
+#          rm -rf .husky
+#          echo rm -rf .gitignore
+#          rm -rf .gitignore
+#          echo ls -la
+#          ls -la
 
 #    - task: Bash@3
 #      displayName: Install Azure CLI version 2.53.1
@@ -44,12 +44,12 @@ steps:
           az storage fs directory upload --account-name sajanstorageaccount -f mycontainer -d "fromgithubrepo" -s "*" --recursive --debug
           echo "The HTML report can be found here: nothing"
 
-    - task: Bash@3
-      displayName: See Files
-      inputs:
-        targetType: 'inline'
-        script: |
-          echo ls -la /home/vsts/
-          ls -la /home/vsts/
-          echo ls -la /home/vsts/.azcopy
-          ls -la /home/vsts/.azcopy
+#    - task: Bash@3
+#      displayName: See Files
+#      inputs:
+#        targetType: 'inline'
+#        script: |
+#          echo ls -la /home/vsts/
+#          ls -la /home/vsts/
+#          echo ls -la /home/vsts/.azcopy
+#          ls -la /home/vsts/.azcopy
