--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -40,6 +40,7 @@ steps:
         scriptType: 'ps'
         scriptLocation: 'inlineScript'
         inlineScript: |
+          $PSVersionTable
           az storage fs directory generate-sas --account-name sajanstorageaccount --file-system mycontainer --name '/' --permissions dlrw
           az storage fs directory upload --account-name sajanstorageaccount -f mycontainer -d "fromgithubrepo" -s "*" --recursive --debug
           echo "The HTML report can be found here: nothing"
