--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -41,8 +41,8 @@ steps:
         scriptLocation: 'inlineScript'
         inlineScript: |
           $PSVersionTable
-          az storage fs directory generate-sas --account-name sajanstorageaccount --file-system mycontainer --name '/' --permissions dlrw
-          az storage fs directory upload --account-name sajanstorageaccount -f mycontainer -d "fromgithubrepo2" -s "*" --recursive --debug
+          az storage fs directory generate-sas --account-name sajanstorageaccount --file-system mycontainer1 --name '/' --permissions dlrw
+          az storage fs directory upload --account-name sajanstorageaccount -f mycontainer1 -d "fromgithubrepo2" -s "*" --recursive --debug
           echo "The HTML report can be found here: nothing"
 
 #    - task: Bash@3
