--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -5,25 +5,25 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-#    - task: Bash@3
-#      displayName: See Files
-#      inputs:
-#        targetType: 'inline'
-#        script: |
-#          echo pwd
-#          pwd
-#          echo ls -la
-#          ls -la
-#          echo rm -rf git
-#          rm -rf .git
-#          echo rm -rf .github
-#          rm -rf .github
-#          echo rm -rf .husky
-#          rm -rf .husky
-#          echo rm -rf .gitignore
-#          rm -rf .gitignore
-#          echo ls -la
-#          ls -la
+    - task: Bash@3
+      displayName: See Files
+      inputs:
+        targetType: 'inline'
+        script: |
+          echo pwd
+          pwd
+          echo ls -la
+          ls -la
+          echo rm -rf git
+          rm -rf .git
+          echo rm -rf .github
+          rm -rf .github
+          echo rm -rf .husky
+          rm -rf .husky
+          echo rm -rf .gitignore
+          rm -rf .gitignore
+          echo ls -la
+          ls -la
 
 #    - task: Bash@3
 #      displayName: Install Azure CLI version 2.53.1
