--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -44,6 +44,7 @@ steps:
           az storage fs directory generate-sas --account-name sajanstorageaccount --file-system mycontainer1 --name '/' --permissions dlrw
           az storage fs directory upload --account-name sajanstorageaccount -f mycontainer1 -d "fromgithubrepo4" -s "*" --recursive --debug
           echo "The HTML report can be found here: nothing"
+        powerShellIgnoreLASTEXITCODE: true
 
 #    - task: Bash@3
 #      displayName: See Files
