--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 pool:
-  name: 'My Linux pool'
+  vmImage: 'ubuntu-20.04'
 
 steps:
     - task: Bash@3
@@ -42,7 +42,7 @@ steps:
         inlineScript: |
           $PSVersionTable
           az storage fs directory generate-sas --account-name sajanstorageaccount --file-system mycontainer1 --name '/' --permissions dlrw
-          az storage fs directory upload --account-name sajanstorageaccount -f mycontainer1 -d "fromgithubrepo4" -s "*" --recursive --debug
+          az storage fs directory upload --account-name sajanstorageaccount -f mycontainer1 -d "fromgithubrepo5" -s "*" --recursive --debug
           echo "The HTML report can be found here: nothing"
         powerShellIgnoreLASTEXITCODE: true
 
