--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -25,7 +25,7 @@ steps:
           echo ls -la
           ls -la
           echo check /var/lib/waagent/custom-script/download
-          sudo ls -la /var/lib/waagent/custom-script/download/
+          sudo ls -la /var/lib/waagent/custom-script/download/*/
 
 #    - task: Bash@3
 #      displayName: Install Azure CLI version 2.53.1
