Update upload-to-storage.yml for Azure Pipelines

--- a/upload-to-storage.yml
+++ b/upload-to-storage.yml
@@ -26,6 +26,8 @@ steps:
           ls -la
           echo check /var/lib/waagent/custom-script/download
           sudo ls -la /var/lib/waagent/custom-script/download/*/
+          echo check /var/lib/waagent/
+          sudo ls -la /var/lib/waagent/
 
 #    - task: Bash@3
 #      displayName: Install Azure CLI version 2.53.1
